--- a/TrainBook/MainWindow.xaml
+++ b/TrainBook/MainWindow.xaml
@@ -23,7 +23,7 @@
     </Window.Resources>
 
     <Border Name="Border">
-        <Grid>
+        <Grid x:Name="MainGrid">
             <Grid ShowGridLines="False">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="40"></RowDefinition>
@@ -150,52 +150,74 @@
 
 
                 </DockPanel>
-                <StackPanel x:Name="NewRootPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+                <StackPanel Visibility="Hidden" x:Name="NewRoutPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Orientation="Horizontal">
                     <StackPanel Orientation="Vertical" Margin="10" >
                         <TextBlock FontSize="16" Margin="5" Text="Точка отправления:"/>
                         <TextBlock FontSize="16" Margin="5" Text="Точка прибытия:"/>
                         <TextBlock FontSize="16" Margin="5" Text="Дата отправления:"/>
                         <TextBlock FontSize="16" Margin="5" Text="Дата прибытия:"/>
                         <TextBlock FontSize="16" Margin="5" Text="Id поезда:"/>
+                        <Button  Style="{StaticResource Button_task}" Height="20"   Width="140"  Name="AddRouteBtn" Click="AddRouteBtn_click">
+                            <TextBlock Text="  Добавить маршрут" />
+                        </Button>
+                        <Button  Style="{StaticResource Button_task}" Height="20"   Width="140"  Name="backToTableBtn" Click="backToTableBtn_Click" >
+                            <TextBlock Text="  Обратно к таблице" />
+                        </Button>
+                        
                     </StackPanel>
                     <StackPanel Orientation="Vertical" Margin="0,10,0,0">
                         <TextBox Margin="0,8,0,0" x:Name="DepPointTxb" MaxWidth="130"/>
                         <TextBox  Margin="0,11,0,0" x:Name="ArrPointTxb" MaxWidth="130"/>
-                        <DatePicker  Margin="0,11,0,0" Name="DepPicker">
-                            <DatePicker.Resources>
-                                <Style TargetType="DatePickerTextBox">
-                                    <Setter Property="Template">
-                                        <Setter.Value>
-                                            <ControlTemplate>
-                                                <TextBox PreviewTextInput="DataPick_PreviewTextInput" x:Name="DepDate" MaxWidth="130" MinWidth="100" Text="{Binding Path=SelectedDate, RelativeSource={RelativeSource AncestorType=DatePicker}, StringFormat={}{0:dd/MM/yyyy hh:mm:ss}}"/>
-                                            </ControlTemplate>
-                                        </Setter.Value>
-                                    </Setter>
-                                </Style>
-                            </DatePicker.Resources>
-                        </DatePicker>
-                        <DatePicker  Margin="0,11,0,0" Name="ArrPicker">
-                            <DatePicker.Resources>
-                                <Style TargetType="DatePickerTextBox">
-                                    <Setter Property="Template">
-                                        <Setter.Value>
-                                            <ControlTemplate>
-                                                <TextBox PreviewTextInput="DataPick_PreviewTextInput" x:Name="ArrDate" MaxWidth="130" MinWidth="100" Text="{Binding Path=SelectedDate, RelativeSource={RelativeSource AncestorType=DatePicker}, StringFormat={}{0:dd/MM/yyyy hh:mm:ss}}"/>
-                                            </ControlTemplate>
-                                        </Setter.Value>
-                                    </Setter>
-                                </Style>
-                            </DatePicker.Resources>
-                        </DatePicker>
-                        <TextBox  Margin="0,11,0,0" x:Name="TrainsIdTxb" MaxWidth="130"/>
+                        <TextBox  Margin="0,16,0,0" PreviewTextInput="DataPick_PreviewTextInput" x:Name="DepDateTxb" MaxWidth="130" MinWidth="100" />
+                        <TextBox   Margin="0,11,0,0" PreviewTextInput="DataPick_PreviewTextInput" x:Name="ArrDateTxb" MaxWidth="130" MinWidth="100"  />
+                        <TextBox  Margin="0,13,0,0" x:Name="TrainsIdTxb" MaxWidth="130" />
+                        <TextBlock x:Name="NewRoute_Warning" Foreground="Red" Visibility="Hidden" FontSize="13" Margin="8" Text="Введены не все данные!"/>
                     </StackPanel>
                 </StackPanel>
-                <Label Grid.Row="1" Grid.Column="1" Visibility="Hidden" x:Name="ActualRoutesLbl" Background="White" Grid.ColumnSpan="2">
+
+                <StackPanel  Visibility="Hidden" x:Name="SortRoutPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal">
+                        <StackPanel Orientation="Vertical" Margin="10" >
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock FontSize="14" Text="Сортировка по дате" Margin="0,-3,5,0"/>
+                                <CheckBox Style="{StaticResource CheckBox}"  Name="isDateSortChB" Click="isDateSortChB_Click" />
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical" x:Name="DateSortPanel" Visibility="Hidden">
+                                <TextBlock Margin="0,5,0,0"  Text="Дата и время отправления"/>
+                                <TextBox Margin="0,3,0,0" MaxWidth="150" x:Name="SortDepDateTxb" PreviewTextInput="DataPick_PreviewTextInput"/>
+                                <TextBlock Margin="0,5,0,0" Text="Дата и время прибытия "/>
+                                <TextBox Margin="0,3,0,0" MaxWidth="150" x:Name="SortArrDateTxb" PreviewTextInput="DataPick_PreviewTextInput"/>
+                            </StackPanel>
+
+                        </StackPanel>
+                        <StackPanel Orientation="Vertical" Margin="0,10,0,0">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock FontSize="14" Text="Сортировка по маршруту" Margin="0,-3,5,0"/>
+                                <CheckBox Style="{StaticResource CheckBox}"  Name="isPointSortChB" Click="isPointSortChB_Click" />
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical"  x:Name="PointSortPanel" Visibility="Hidden">
+                                <TextBlock Margin="0,5,0,0"  Text="Точка отправления"/>
+                                <TextBox Margin="0,3,40,0"  MaxWidth="150" x:Name="SortDepPointTxb"/>
+                                <TextBlock Margin="0,5,0,0" Text="Точка прибытия "/>
+                                <TextBox Margin="0,3,40,0" MaxWidth="150" x:Name="SortArrPointTxb" />
+                            </StackPanel>
+                        </StackPanel>
+
+                    </StackPanel>
+                    <Button  Style="{StaticResource Button_task}" Height="20" Margin="10,0,0,5"   Width="300" HorizontalAlignment="Left" Name="SortRouteBtn" >
+                        <TextBlock Padding="85,0,0,0" Text="Начать сортировку" />
+                    </Button>
+                    <Button  Style="{StaticResource Button_task}" Height="20"  Margin="10,0,0,5"  Width="300" HorizontalAlignment="Left"  Name="backToTableFromSortBtn" Click="backToTableBtn_Click">
+                        <TextBlock Padding="85,0,0,0" Text="Обратно к таблице" />
+                    </Button>
+                </StackPanel>
+               
+                <Label Grid.Row="1" Grid.Column="1" Visibility="Visible" x:Name="ActualRoutesLbl" Background="White" Grid.ColumnSpan="2">
                     <Label.Content>
                         <TextBlock Text="Актуальные маршруты" FontSize="18" Margin="0,-9,0,0"/>
                     </Label.Content>
                 </Label>
-                <DataGrid Visibility="Hidden" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" x:Name="ActualRoutes" FontSize="16" Margin="0,20,0,0" AutoGenerateColumns="False">
+                <DataGrid Visibility="Visible" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" x:Name="ActualRoutes" FontSize="16" Margin="0,20,0,0" AutoGenerateColumns="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DepartureDate }" Header="Дата отправления" Width="180"/>
                         <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DeparturePoint }" Header="Точка отправления" Width="180"/>
@@ -245,7 +267,7 @@
                         <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="DeleteTrain">
                             <TextBlock Text="Удалить поезд из системы" Margin="26,0,0,0"/>
                         </Button>
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="AddRoute">
+                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="AddRoute" Click="AddRoute_Click">
                             <TextBlock Text="Добавить маршрут" Margin="51,0,0,0"/>
                         </Button>
                         <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="DeleteRoute">
