--- a/TrainBook/MainWindow.xaml
+++ b/TrainBook/MainWindow.xaml
@@ -203,29 +203,46 @@
                         <TextBlock x:Name="WOTrain_Warning" Foreground="Red" Visibility="Hidden" FontSize="13" Margin="5,-20,0,0" Text="Введите id!"/>
                         
                     </StackPanel>
-                    <Polyline Margin="5,0,0,0"  Stroke="Black" Points=" 0,0 0,150"></Polyline>
-                    <Polyline Margin="0,0,0,0"  Stroke="Black" Points=" 0,150 -460,150" Name="SepLine"></Polyline>
-                    <StackPanel Orientation="Vertical" Visibility="Hidden" Name="breakDownPanel" >
-                        <TextBlock  FontSize="18"  Margin ="5,5,0,0" Text="Протокол списывания:"/>
-                        <TextBlock  FontSize="18"  Margin ="5,5,0,0" Name="infoTb" Text="id - "/>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontSize="14" Text="Обнаружена поломка" Margin="5,0,5,0"/>
-                            <CheckBox Style="{StaticResource CheckBox}"  Margin="0,3,5,0"  Name="isBrokenTrainChB" Click="isBrokenTrainChB_Click"  />
-                        </StackPanel>
-                        <StackPanel x:Name="breakdownDescPanel" Visibility="Hidden" Orientation="Vertical">
-                            <TextBlock FontSize="14" Text="Описание поломки:" Margin="5,10,5,0"/>
-                            <TextBox x:Name="breakDownDescTxb"  Margin="5,5,0,0" MaxHeight="100" FontSize="14" Height="100" Width="300" AcceptsReturn="True" 
+                   
+                </StackPanel>
+                <StackPanel Margin="150,0,0,0" HorizontalAlignment="Center" Orientation="Vertical" Visibility="Hidden" Name="breakDownPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2">
+                    <TextBlock  FontSize="18"  Margin ="5,5,0,0" Text="Протокол списывания:"/>
+                    <TextBlock  FontSize="18"  Margin ="5,5,0,0" Name="infoTb" Text="id - "/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock FontSize="14" Text="Обнаружена поломка" Margin="5,0,5,0"/>
+                        <CheckBox Style="{StaticResource CheckBox}"  Margin="0,3,5,0"  Name="isBrokenTrainChB" Click="isBrokenTrainChB_Click"  />
+                    </StackPanel>
+                    <StackPanel x:Name="breakdownDescPanel" Visibility="Hidden" Orientation="Vertical">
+                        <TextBlock FontSize="14" Text="Описание поломки:" Margin="5,10,5,0"/>
+                        <TextBox x:Name="breakDownDescTxb"  Margin="5,5,0,0" MaxHeight="100" FontSize="14" Height="100" Width="300" AcceptsReturn="True" 
                             VerticalScrollBarVisibility="Auto"/>
-                            <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,5,0,0" Width="190"   Name="breakdownDescBtn" Click="breakdownDescBtn_Click"  >
-                                <TextBlock  Padding="50,0,0,0" Text="Внести данные" />
-                            </Button>
-                            <TextBlock x:Name="BOTrain_Warning" Foreground="Red" Visibility="Hidden" FontSize="13" Margin="5,0,0,0" Text="Введите описание поломки!"/>
-                            <TextBlock FontSize="16" FontWeight="Bold" Visibility="Hidden" x:Name="WOTrainNotificationTb2"  Margin ="5,-15,0,0" Text="Поезд списан!"/>
-                        </StackPanel>
+                        <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,5,0,0" Width="190"   Name="breakdownDescBtn" Click="breakdownDescBtn_Click"  >
+                            <TextBlock  Padding="50,0,0,0" Text="Внести данные" />
+                        </Button>
+                        <TextBlock x:Name="BOTrain_Warning" Foreground="Red" Visibility="Hidden" FontSize="13" Margin="5,0,0,0" Text="Введите описание поломки!"/>
+                        <TextBlock FontSize="16" FontWeight="Bold" Visibility="Hidden" x:Name="WOTrainNotificationTb2"  Margin ="5,-15,0,0" Text="Поезд списан!"/>
+                    </StackPanel>
+                </StackPanel>
+
+                <StackPanel Orientation="Horizontal" Visibility="Hidden" x:Name="checkingTheEquipment" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2">
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock x:Name="numTB"  FontSize="18"  Margin ="5,5,0,0" Text="Поезд №"/>
+                        <TextBlock x:Name="IdTB"   FontSize="18"  Margin ="5,5,0,0" Text="id - "/>
+                        <TextBlock x:Name="CondTB"  FontSize="18"  Margin ="5,5,0,10" Text="Состояние: "/>
+                        <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,0,0,0"  Width="190"  Name="CheckTrain" Click="CheckTrainBtn_Click">
+                            <TextBlock Padding="15,0,0,0" Text="Внести данные о поломке" />
+                        </Button>
+                        <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,5,0,0" Width="190"  Name="ScipTrain" Click="ScipTrain_Click" >
+                            <TextBlock  Padding="30,0,0,0" Text="Следующий поезд" />
+                        </Button>
+                        <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,5,0,0" Width="190"  Name="BTBFroCTETrainBtn" Click="backToTableBtn_Click" >
+                            <TextBlock  Padding="30,0,0,0" Text="Обратно к таблице" />
+                        </Button>
+                        <TextBlock x:Name="CheckTrainNot" Visibility="Hidden" FontSize="18" Foreground="Red"  Margin ="5,-2,0,0" Text="Поезд уже списан"/>
                     </StackPanel>
                     
                 </StackPanel>
-                
+
                 <StackPanel Orientation="Vertical" Visibility="Hidden" x:Name="writeOnTrainPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2">
                     <TextBlock FontSize="18"  Margin ="5,5,0,0" Text="Введите id восстанавливаемого поезда:"/>
                     <StackPanel  Orientation="Horizontal">
@@ -240,21 +257,6 @@
                     </Button>
                     <TextBlock FontSize="16" FontWeight="Bold" Visibility="Hidden" x:Name="WOnTrainNotificationTb"  Margin ="5,5,0,0" Text="Поезд восстановлен!"/>
                     <TextBlock x:Name="WOnTrain_Warning" Foreground="Red" Visibility="Hidden" FontSize="13" Margin="5,-20,0,0" Text="Введите id!"/>
-                </StackPanel>
-                <StackPanel Orientation="Vertical" Visibility="Visible" x:Name="NewStandarsTrainPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2">
-                    <TextBlock FontSize="18"  Margin ="5,5,0,0" Text="Введите новый стандарт скорости:"/>
-                    <StackPanel  Orientation="Horizontal">
-                        <TextBlock FontSize="16" Margin="10" Text="Допустимая скорость:"/>
-                        <TextBox  Margin="0,10,0,10" PreviewTextInput="Train_PreviewTextInput" x:Name="NSTrainSpeedTxb" MaxWidth="130" MinWidth="100" />
-                    </StackPanel>
-                    <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,0,0,0"  Width="190"  Name="NSTrainBtn" Click="NSTrainBtn_click">
-                        <TextBlock Padding="35,0,0,0" Text="Ввести стандарты" />
-                    </Button>
-                    <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,5,0,0" Width="190"  Name="BTBFromNSTrainBtn" Click="backToTableBtn_Click" >
-                        <TextBlock  Padding="30,0,0,0" Text="Обратно к таблице" />
-                    </Button>
-                    <TextBlock FontSize="16" FontWeight="Bold" Visibility="Hidden" x:Name="NSTrainNotificationTb"  Margin ="5,5,0,0" Text="Стандарты введены!"/>
-                    <TextBlock x:Name="NSTrain_Warning" Foreground="Red" Visibility="Hidden" FontSize="13" Margin="5,-20,0,0" Text="Введите скорость!"/>
                 </StackPanel>
                 <StackPanel Orientation="Vertical" Visibility="Hidden" x:Name="NewRoutPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2">
                     <TextBlock FontSize="18"  Margin ="5,5,0,0" Text="Введите информацию об добавляемом маршруте:"/>
@@ -349,12 +351,12 @@
                         <TextBlock Padding="85,0,0,0" Text="Обратно к таблице" />
                     </Button>
                 </StackPanel>
-                <Label  Grid.Row="1" Grid.Column="1" Visibility="Hidden" x:Name="ActualRouteslbl" Background="White" Grid.ColumnSpan="2">
+                <Label  Grid.Row="1" Grid.Column="1" Visibility="Visible" x:Name="ActualRouteslbl" Background="White" Grid.ColumnSpan="2">
                     <Label.Content>
                         <TextBlock Text="Актуальные маршруты" FontSize="18" Margin="0,-9,0,0"/>
                     </Label.Content>
                  </Label>
-                <DataGrid  Visibility="Hidden" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  FontSize="16" Margin="0,20,0,0"  AutoGenerateColumns="False" x:Name="ActualRoutesTable" CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False">
+                <DataGrid  Visibility="Visible" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  FontSize="16" Margin="0,20,0,0"  AutoGenerateColumns="False" x:Name="ActualRoutesTable" CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DepartureDate }" Header="Дата отправления" Width="180"/>
                         <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DeparturePoint }" Header="Точка отправления" Width="180"/>
@@ -390,8 +392,8 @@
                         <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="Sort_actual_routes" Click="Sort_actual_routes_Click">
                             <TextBlock Text="Сортировать актуальные маршруты" Margin="1,0,0,0"/>
                         </Button>
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="change_standards" Click="NSTrain_Click">
-                            <TextBlock Text="Изменить стандарты эксплуатации" Margin="5,0,0,0"/>
+                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="change_standards" Click="CheckTrain_Click">
+                            <TextBlock Text="Проверка тех. состояния поездов" Margin="5,0,0,0"/>
                         </Button>
                         <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="writeOffTrain" Click="WOTrain_Click">
                             <TextBlock Text="Списать с эксплуатации поезд" Margin="15,0,0,0"/>
