--- a/TrainBook/MainWindow.xaml
+++ b/TrainBook/MainWindow.xaml
@@ -8,6 +8,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="200" Width="500"
         WindowStartupLocation="CenterScreen"
+         WindowState="Maximized"
         AllowsTransparency="True"
         WindowStyle="None"
         Background="#FFBEBEBE"
@@ -49,7 +50,7 @@
                     <StackPanel
                         Orientation="Horizontal"
                         HorizontalAlignment="Right">
-                        <Label Content="Войти..." Style="{StaticResource ButtonHead}" 
+                        <Label Visibility="Visible" Content="Войти..." Style="{StaticResource ButtonHead}" 
                            Name="Login_label"
                            MouseEnter="Header_Mouse_Enter"
                            MouseLeave="Header_Mouse_Leave"
@@ -111,6 +112,7 @@
                        Grid.Row="0"
                        Grid.ColumnSpan="2"
                        MouseLeftButtonDown="Mouse_Drag_Window"
+                           
                        >
                     <DockPanel.Background>
                         <SolidColorBrush Color="#FF2E2E30" ></SolidColorBrush>
@@ -125,20 +127,20 @@
                        Grid.ColumnSpan="2"
                        Grid.Row="0" HorizontalAlignment="Left" Width="454" Margin="0,2"
                        >
-                    <StackPanel Orientation="Vertical">
+                    <StackPanel Visibility="Hidden" Orientation="Vertical"  x:Name="OtherTablePanel">
                         <StackPanel Orientation="Horizontal" Height="18" Margin="0,5,0,0">
                             <Label Content="Список поездов"  Style="{StaticResource ButtonHead}"
-                           MouseEnter="Header_Mouse_Enter" MouseLeave="Header_Mouse_Leave"
+                           MouseEnter="Header_Mouse_Enter" MouseLeave="Header_Mouse_Leave" 
                           
-                                   MouseUp="ButtonUp"/>
+                                   MouseUp="ButtonUp" MouseDown="Open_TrainTable"/>
                             <Label Content="Оповещения" Style="{StaticResource ButtonHead}" 
                                    MouseEnter="Header_Mouse_Enter"
                            MouseLeave="Header_Mouse_Leave"
                            
-                           MouseUp="ButtonUp"
+                           MouseUp="ButtonUp" MouseDown="Open_NotTabl"
                            />
                             <Label Content="Архив маршрутов" Style="{StaticResource ButtonHead}"
-                           MouseEnter="Header_Mouse_Enter" MouseLeave="Header_Mouse_Leave" 
+                           MouseEnter="Header_Mouse_Enter" MouseLeave="Header_Mouse_Leave" MouseDown="Open_RoutesTable" 
                                    
                            />
 
@@ -280,7 +282,7 @@
                             <TextBox  Margin="0,11,0,0" x:Name="ArrPointTxb" MaxWidth="130"/>
                             <TextBox  Margin="0,16,0,0" PreviewTextInput="DataPick_PreviewTextInput" x:Name="DepDateTxb" MaxWidth="130" MinWidth="100" />
                             <TextBox   Margin="0,11,0,0" PreviewTextInput="DataPick_PreviewTextInput" x:Name="ArrDateTxb" MaxWidth="130" MinWidth="100"  />
-                            <TextBox  Margin="0,13,0,0" x:Name="TrainsIdTxb" MaxWidth="130" />
+                            <TextBox  Margin="0,13,0,0" x:Name="TrainsIdTxb" PreviewTextInput="Train_PreviewTextInput" MaxWidth="130" />
                             <TextBlock x:Name="NewRoute_Warning" Foreground="Red" Visibility="Hidden" FontSize="13" Margin="8" Text="Введены не все данные!"/>
                         </StackPanel>
                     </StackPanel>
@@ -308,7 +310,7 @@
                             <TextBox  Margin="0,11,0,0" x:Name="DelArrPointTxb" MaxWidth="130"/>
                             <TextBox  Margin="0,16,0,0" PreviewTextInput="DataPick_PreviewTextInput" x:Name="DelDepDateTxb" MaxWidth="130" MinWidth="100" />
                             <TextBox   Margin="0,11,0,0" PreviewTextInput="DataPick_PreviewTextInput" x:Name="DelArrDateTxb" MaxWidth="130" MinWidth="100"  />
-                            <TextBox  Margin="0,13,0,0" x:Name="DelTrainsIdTxb" MaxWidth="130" />
+                            <TextBox  Margin="0,13,0,0" x:Name="DelTrainsIdTxb" PreviewTextInput="Train_PreviewTextInput" MaxWidth="130" />
                             <TextBlock x:Name="DelRoute_Warning" Foreground="Red" Visibility="Hidden" FontSize="13" Margin="8" Text="Введены не все данные!"/>
                         </StackPanel>
                     </StackPanel>
@@ -344,19 +346,24 @@
                         </StackPanel>
 
                     </StackPanel>
-                    <Button  Style="{StaticResource Button_task}" Height="20" Margin="10,0,0,5"   Width="300" HorizontalAlignment="Left" Name="SortRouteBtn" >
+                    <Button  Style="{StaticResource Button_task}" Height="20" Margin="10,0,0,5"   Width="300" HorizontalAlignment="Left" Name="SortRouteBtn" Click="SortRouteBtn_Click">
                         <TextBlock Padding="85,0,0,0" Text="Начать сортировку" />
                     </Button>
                     <Button  Style="{StaticResource Button_task}" Height="20"  Margin="10,0,0,5"  Width="300" HorizontalAlignment="Left"  Name="backToTableFromSortBtn_Click" Click="backToTableBtn_Click">
                         <TextBlock Padding="85,0,0,0" Text="Обратно к таблице" />
                     </Button>
                 </StackPanel>
-                <Label  Grid.Row="1" Grid.Column="1" Visibility="Visible" x:Name="ActualRouteslbl" Background="White" Grid.ColumnSpan="2">
+                <Label  Grid.Row="1" Foreground="Red" Grid.Column="1" Visibility="Visible" x:Name="NoUserslbl" HorizontalAlignment="Center" VerticalAlignment="Center"  Grid.ColumnSpan="2">
+                    <Label.Content>
+                        <TextBlock Text="Войдите в систему!" FontSize="18" Margin="0,-9,0,0"/>
+                    </Label.Content>
+                </Label>
+                <Label  Grid.Row="1" Grid.Column="1" Visibility="Hidden" x:Name="ActualRouteslbl" Background="White" Grid.ColumnSpan="2">
                     <Label.Content>
                         <TextBlock Text="Актуальные маршруты" FontSize="18" Margin="0,-9,0,0"/>
                     </Label.Content>
                  </Label>
-                <DataGrid  Visibility="Visible" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  FontSize="16" Margin="0,20,0,0"  AutoGenerateColumns="False" x:Name="ActualRoutesTable" CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False">
+                <DataGrid  Visibility="Hidden" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  FontSize="16" Margin="0,20,0,0"  AutoGenerateColumns="False" x:Name="ActualRoutesTable" CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DepartureDate }" Header="Дата отправления" Width="180"/>
                         <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DeparturePoint }" Header="Точка отправления" Width="180"/>
@@ -389,30 +396,39 @@
                                 Grid.Column="1"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Top">
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="Sort_actual_routes" Click="Sort_actual_routes_Click">
-                            <TextBlock Text="Сортировать актуальные маршруты" Margin="1,0,0,0"/>
-                        </Button>
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="change_standards" Click="CheckTrain_Click">
-                            <TextBlock Text="Проверка тех. состояния поездов" Margin="5,0,0,0"/>
-                        </Button>
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="writeOffTrain" Click="WOTrain_Click">
-                            <TextBlock Text="Списать с эксплуатации поезд" Margin="15,0,0,0"/>
-                        </Button>
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="writeOnTrain" Click="writeOnTrain_Click">
-                            <TextBlock Text="Восстановить эксплуатацию поезда" Margin="1,0,0,0"/>
-                        </Button>
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="AddTrain" Click="AddTrain_Click">
-                            <TextBlock Text="Добавить поезд в систему" Margin="25,0,0,0"/>
-                        </Button>
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="DeleteTrain" Click="DeleteTrain_Click">
-                            <TextBlock Text="Удалить поезд из системы" Margin="26,0,0,0"/>
-                        </Button>
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="AddRoute" Click="AddRoute_Click">
-                            <TextBlock Text="Добавить маршрут" Margin="51,0,0,0"/>
-                        </Button>
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="DeleteRoute" Click="DeleteRoute_Click">
-                            <TextBlock Text="Удалить маршрут" Margin="55,0,0,0"/>
-                        </Button>
+                        <StackPanel x:Name="UserArea" Visibility="Hidden">
+                            <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="Sort_actual_routes" Click="Sort_actual_routes_Click">
+                                <TextBlock Text="Сортировать актуальные маршруты" Margin="1,0,0,0"/>
+                            </Button>
+                            <StackPanel x:Name="HeadArea">
+                                <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="change_standards" Click="CheckTrain_Click">
+                                    <TextBlock Text="Проверка тех. состояния поездов" Margin="5,0,0,0"/>
+                                </Button>
+                                <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="writeOffTrain" Click="WOTrain_Click">
+                                    <TextBlock Text="Списать с эксплуатации поезд" Margin="15,0,0,0"/>
+                                </Button>
+                                <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="writeOnTrain" Click="writeOnTrain_Click">
+                                    <TextBlock Text="Восстановить эксплуатацию поезда" Margin="1,0,0,0"/>
+                                </Button>
+                                <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="AddRoute" Click="AddRoute_Click">
+                                    <TextBlock Text="Добавить маршрут" Margin="51,0,0,0"/>
+                                </Button>
+                                <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="DeleteRoute" Click="DeleteRoute_Click">
+                                    <TextBlock Text="Удалить маршрут" Margin="55,0,0,0"/>
+                                </Button>
+                                <StackPanel x:Name="AdminArea">
+                                    <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="AddTrain" Click="AddTrain_Click">
+                                        <TextBlock Text="Добавить поезд в систему" Margin="25,0,0,0"/>
+                                    </Button>
+                                    <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="DeleteTrain" Click="DeleteTrain_Click">
+                                        <TextBlock Text="Удалить поезд из системы" Margin="26,0,0,0"/>
+                                    </Button>
+                                </StackPanel>
+                            </StackPanel>
+                        </StackPanel>
+                        
+                        
+                        
 
 
                     </StackPanel>
