--- a/TrainBook/RouteTable.xaml
+++ b/TrainBook/RouteTable.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="TrainBook.TrainTable"
+﻿<Window x:Class="TrainBook.RouteTable"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TrainBook"
-        WindowState="Maximized"
         WindowStartupLocation="CenterScreen"
+         WindowState="Maximized"
         AllowsTransparency="True"
         WindowStyle="None"
         Background="#FFBEBEBE"
@@ -124,10 +124,10 @@
                                    MouseEnter="Header_Mouse_Enter"
                            MouseLeave="Header_Mouse_Leave"
                            
-                           MouseUp="ButtonUp" MouseDown="RouteTable_MouseDown"
+                           MouseUp="ButtonUp" MouseDown="NotTabl_MouseDown"
                            />
-                            <Label Content="Архив маршрутов" Style="{StaticResource ButtonHead}"
-                           MouseEnter="Header_Mouse_Enter" MouseLeave="Header_Mouse_Leave" MouseDown="RouteTable_MouseDown" 
+                            <Label Content="Список поездов" Style="{StaticResource ButtonHead}"
+                           MouseEnter="Header_Mouse_Enter" MouseLeave="Header_Mouse_Leave" MouseDown="TrainTabll_MouseDown" 
                                    
                            />
 
@@ -139,51 +139,57 @@
 
 
                 </DockPanel>
-                <StackPanel  Visibility="Visible" x:Name="SortTrainPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  Orientation="Vertical">
-                    <TextBlock Margin="5,0,0,0" Text="Id поезда:" FontSize="16"/>
-                    <TextBox  Margin="5,0,0,0" HorizontalAlignment="Left" PreviewTextInput="Train_PreviewTextInput" x:Name = "IdTxb" MaxWidth="130" MinWidth="100"/>
-                    <TextBlock Margin="5,0,0,0" Text="Состояние:" FontSize="16"/>
-                    <StackPanel Orientation="Vertical" Margin="10,5,0,0" x:Name="SortPanel">
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontSize="14" Text="В простое" Margin="0,-3,5,0"/>
-                            <CheckBox Style="{StaticResource CheckBox}" Margin="2,0,0,0" IsChecked="True"  Name="DontWorkChB" Click="ChB_Checked" />
+                <StackPanel  Visibility="Hidden" x:Name="SortRoutPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  Orientation="Vertical">
+                    <StackPanel Orientation="Horizontal">
+                        <StackPanel Orientation="Vertical" Margin="10" >
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock FontSize="14" Text="Сортировка по дате" Margin="0,-3,5,0"/>
+                                <CheckBox Style="{StaticResource CheckBox}"  Name="isDateSortChB" Click="isDateSortChB_Click" />
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical" x:Name="DateSortPanel" Visibility="Hidden">
+                                <TextBlock Margin="0,5,0,0"  Text="Дата и время отправления"/>
+                                <TextBox Margin="0,3,0,0" MaxWidth="150" x:Name="SortDepDateTxb" PreviewTextInput="DataPick_PreviewTextInput"/>
+                                <TextBlock Margin="0,5,0,0" Text="Дата и время прибытия "/>
+                                <TextBox Margin="0,3,0,0" MaxWidth="150" x:Name="SortArrDateTxb" PreviewTextInput="DataPick_PreviewTextInput"/>
+                            </StackPanel>
+
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontSize="14" Text="Списан" Margin="0,-3,5,0"/>
-                            <CheckBox Style="{StaticResource CheckBox}"  Margin="19,0,0,0"  Name="BrokenChB" Click="ChB_Checked" />
+                        <StackPanel Orientation="Vertical" Margin="0,10,0,0">
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock FontSize="14" Text="Сортировка по маршруту" Margin="0,-3,5,0"/>
+                                <CheckBox Style="{StaticResource CheckBox}"  Name="isPointSortChB" Click="isPointSortChB_Click" />
+                            </StackPanel>
+                            <StackPanel Orientation="Vertical"  x:Name="PointSortPanel" Visibility="Hidden">
+                                <TextBlock Margin="0,5,0,0"  Text="Точка отправления"/>
+                                <TextBox Margin="0,3,40,0"  MaxWidth="150" x:Name="SortDepPointTxb"/>
+                                <TextBlock Margin="0,5,0,0" Text="Точка прибытия "/>
+                                <TextBox Margin="0,3,40,0" MaxWidth="150" x:Name="SortArrPointTxb" />
+                            </StackPanel>
                         </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontSize="14" Text="В рейсе" Margin="0,-3,5,0"/>
-                            <CheckBox Style="{StaticResource CheckBox}"  Margin="17,1,0,0"  Name="inRouteChB" Click="ChB_Checked" />
-                        </StackPanel>
-                        <StackPanel Orientation="Horizontal">
-                            <TextBlock FontSize="14" Text="Без сост." Margin="0,-3,5,0"/>
-                            <CheckBox Style="{StaticResource CheckBox}"  Margin="11,1,0,0"  Name="byThePleaChB" Click="ChB_Checked" />
-                        </StackPanel>
+
                     </StackPanel>
-                    <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,5,0,0"  Width="190"  Name="SortBtn" Click="SortBtn_Click">
-                        <TextBlock Padding="50,0,0,0" Text="Сортировать" />
+                    <Button  Style="{StaticResource Button_task}" Height="20" Margin="10,0,0,5"   Width="300" HorizontalAlignment="Left" Name="SortRouteBtn" Click="SortRouteBtn_Click" >
+                        <TextBlock Padding="85,0,0,0" Text="Начать сортировку" />
                     </Button>
-                    <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,5,0,0"  Width="190"  Name="AllList" Click="AllList_Click">
-                        <TextBlock Padding="30,0,0,0" Text="Вернуть весь список" />
+                    <Button  Style="{StaticResource Button_task}" Height="20"  Margin="10,0,0,5"  Width="300" HorizontalAlignment="Left"  Name="backToTableFromSortBtn_Click" Click="backToTableBtn_Click">
+                        <TextBlock Padding="85,0,0,0" Text="Обратно к таблице" />
                     </Button>
-                    <Button HorizontalAlignment="Left" Style="{StaticResource Button_task}" Height="20" Margin="5,5,0,0"  Width="190"  Name="BackToTableBtn" Click="BackToTableBtn_Click">
-                        <TextBlock Padding="40,0,0,0" Text="Назад к таблице" />
-                    </Button>
-                    <TextBlock x:Name="notification" Visibility="Hidden"  Margin="5,0,5,0" FontSize="16" Text="Сортировка завершена"/>
                 </StackPanel>
-                <Label  Grid.Row="1" Grid.Column="1" Visibility="Visible" x:Name="TrainsLbl" Background="White" Grid.ColumnSpan="2">
+
+                <Label  Grid.Row="1" Grid.Column="1" Visibility="Visible" x:Name="Routeslbl" Background="White" Grid.ColumnSpan="2">
                     <Label.Content>
-                        <TextBlock Text="Поезда"  FontSize="18" Margin="0,-9,0,0"/>
+                        <TextBlock Text="Маршруты" FontSize="18" Margin="0,-9,0,0"/>
                     </Label.Content>
                 </Label>
-                <DataGrid  Visibility="Visible" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  FontSize="16" Margin="0,20,0,0"  AutoGenerateColumns="False" x:Name="TrainsTable" CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False">
+                <DataGrid  Visibility="Visible" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  FontSize="16" Margin="0,20,0,0"  AutoGenerateColumns="False" x:Name="RoutesTable" CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False">
                     <DataGrid.Columns>
-                        <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = Id }" Header="Id поезда" Width="180"/>
-                        <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DescriptionOfCondition }" Header="Состояние" Width="600"/>
+                        <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DepartureDate }" Header="Дата отправления" Width="180"/>
+                        <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DeparturePoint }" Header="Точка отправления" Width="180"/>
+                        <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = ArrivalDate }" Header="Дата прибытия" Width="180"/>
+                        <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = ArrivalPoint }" Header="Точка прибытия" Width="180"/>
+                        <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = TrainsId }" Header="Id поезда" Width="180"/>
                     </DataGrid.Columns>
                 </DataGrid>
-
 
                 <!--#endregion-->
 
@@ -207,10 +213,10 @@
                                 Grid.Column="1"
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Top">
-                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="Open_Sort" Click="Open_Sort_Click" >
-                            <TextBlock Padding="40,0,0,0" Text="Сортировка поездов" Margin="1,0,0,0"/>
+                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="Sort_actual_routes" Click="Sort_actual_routes_Click" >
+                            <TextBlock Padding="50,0,0,0" Text="Сортировка маршрутов" Margin="1,0,0,0"/>
                         </Button>
-                        
+
 
 
                     </StackPanel>
