Локализация и порядок уведомлений
Поставил русскую локализацию для дат - теперь они выглядят и вводятся более удобно
Исправил вывод уведомлений/оповещений - теперь сначала отображаются последние прибывшие уведомления

--- a/TrainBook/MainWindow.xaml
+++ b/TrainBook/MainWindow.xaml
@@ -133,7 +133,7 @@
                            MouseEnter="Header_Mouse_Enter" MouseLeave="Header_Mouse_Leave" 
                           
                                    MouseUp="ButtonUp" MouseDown="Open_TrainTable"/>
-                            <Label Content="Оповещения" Style="{StaticResource ButtonHead}" 
+                            <Label x:Name="NoteInfo"  Content="Оповещения" Style="{StaticResource ButtonHead}" 
                                    MouseEnter="Header_Mouse_Enter"
                            MouseLeave="Header_Mouse_Leave"
                            
