--- a/TrainBook/Notifications.xaml
+++ b/TrainBook/Notifications.xaml
@@ -139,7 +139,7 @@
 
 
                 </DockPanel>
-                <StackPanel  Visibility="Visible" x:Name="SortNotPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  Orientation="Vertical">
+                <StackPanel  Visibility="Hidden" x:Name="SortNotPanel" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  Orientation="Vertical">
                     <TextBlock Margin="5,0,0,0" Text="Дата:" FontSize="16"/>
                     <TextBox  Margin="5,0,0,0" HorizontalAlignment="Left" PreviewTextInput="DataPick_PreviewTextInput" x:Name = "DateTxb" MaxWidth="160" MinWidth="100"/>
                     <TextBlock Margin="5,0,0,0" Text="Режим сортировки:" FontSize="16"/>
@@ -169,12 +169,12 @@
                     <TextBlock x:Name="notification" Visibility="Hidden"  Margin="5,0,5,0" FontSize="16" Text="Сортировка завершена"/>
                 </StackPanel>
 
-                <Label  Grid.Row="1" Grid.Column="1" Visibility="Hidden" x:Name="NotificationLbl" Background="White" Grid.ColumnSpan="2">
+                <Label  Grid.Row="1" Grid.Column="1" Visibility="Visible" x:Name="NotificationLbl" Background="White" Grid.ColumnSpan="2">
                     <Label.Content>
                         <TextBlock Text="Уведомления"  FontSize="18" Margin="0,-9,0,0"/>
                     </Label.Content>
                 </Label>
-                <DataGrid  Visibility="Hidden" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  FontSize="16" Margin="0,20,0,0"  AutoGenerateColumns="False" x:Name="NotTable" CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False">
+                <DataGrid  Visibility="Visible" Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2"  FontSize="16" Margin="0,20,0,0"  AutoGenerateColumns="False" x:Name="NotTable" CanUserDeleteRows="False" CanUserAddRows="False" CanUserResizeRows="False">
                     <DataGrid.Columns>
                         <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = dateOfDebiting }" Header="Дата события" Width="180"/>
                         <DataGridTextColumn IsReadOnly="True"  Binding="{Binding Path = DescriptionOfCondition }" Header="Состояние" Width="500"/>
@@ -207,6 +207,9 @@
                                 VerticalAlignment="Top">
                         <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="Open_Sort" Click="Open_Sort_Click" >
                             <TextBlock Padding="40,0,0,0" Text="Сортировка cобытий" Margin="1,0,0,0"/>
+                        </Button>
+                        <Button  Style="{StaticResource Button_task}"  Margin="0,5,2,5" Width="220"  Name="ClearBtn" Click="ClearBtn_Click" >
+                            <TextBlock Padding="40,0,0,0" Text="Очистить уведомления" Margin="1,0,0,0"/>
                         </Button>
 
 
